<?xml version="1.0"?>
<package>
  <name>ros_imu_wit</name>
  <version>0.2.0</version>
  <description>The ros_imu_wit package</description>

  <maintainer email="gouych13@icloud.com">hmxf</maintainer>
  <license>BSD</license>
  <url type="website">http://www.wit-motion.cn</url>
  <url type="bugtracker">http://www.wit-motion.cn</url>
  <author email="kevin@wit-motion.com">kevin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
